@@ -1,7 +1,7 @@
 /*
  	(c) Copyright 2006 Hewlett-Packard Development Company, LP
  	All rights reserved - see end of file.
- 	$Id: ConnectionAssembler.java,v 1.7 2006-11-15 14:52:05 pldms Exp $
+ 	$Id: ConnectionAssembler.java,v 1.8 2006-11-16 14:44:47 chris-dollin Exp $
 */
 
 package com.hp.hpl.jena.assembler.assemblers;
@@ -9,7 +9,6 @@ package com.hp.hpl.jena.assembler.assemblers;
 import com.hp.hpl.jena.JenaRuntime;
 import com.hp.hpl.jena.assembler.*;
 import com.hp.hpl.jena.assembler.exceptions.CannotLoadClassException;
-import com.hp.hpl.jena.assembler.exceptions.PropertyRequiredException;
 import com.hp.hpl.jena.rdf.model.*;
 
 /**
@@ -46,12 +45,8 @@ public class ConnectionAssembler extends AssemblerBase implements Assembler
         checkType( root, JA.Connection );
         String dbUser = getUser( root ), dbPassword = getPassword( root );
         String dbURL = getURL( root ), dbType = getType( root );
-        if (dbURL == null)
-        	throw new PropertyRequiredException(root, JA.property("dbURL"));
-        if (dbType == null)
-        	throw new PropertyRequiredException(root, JA.property("dbType"));
         loadClasses( root );
-        return createConnection( dbURL, dbType, dbUser, dbPassword );
+        return createConnection( root.getURI(), dbURL, dbType, dbUser, dbPassword );
         }    
     
     /**
@@ -80,8 +75,8 @@ public class ConnectionAssembler extends AssemblerBase implements Assembler
         }
 
     protected ConnectionDescription createConnection
-        ( String dbURL, String dbType, String dbUser, String dbPassword )
-        { return ConnectionDescription.create( dbURL, dbUser, dbPassword, dbType ); }
+        ( String subject, String dbURL, String dbType, String dbUser, String dbPassword )
+        { return ConnectionDescription.create( subject, dbURL, dbUser, dbPassword, dbType ); }
     
     public String getUser( Resource root )
         { return get( root, "dbUser", defaultUser ); }
